# polyconfig

./: .gitignore  README.md  pyproject.toml
src/helpers/: pre_commit.py  pre_push.py
src/polyconfig/: __init__.py  polyconfig.py
tests/: .env  .env2  test_config.py  test_dot_tree_config.py  test_strautocast.py
